--- a/tripplanner.css
+++ b/tripplanner.css
@@ -25,3 +25,15 @@ padding-bottom: 5px;
 margin-left: -20px;
 font-size: x-large;
 }
+.modalpopup{
+z-index: 1;
+padding: 20px; 
+border: 3px solid #000000; 
+background-color: #FF9D00;
+-webkit-border-radius: 10px;
+width: 200px;
+left:30px;
+top:150px;
+position: absolute;
+opacity:0.9;
+}
