--- a/tripplanner.css
+++ b/tripplanner.css
@@ -1,4 +1,5 @@
 body {
+z-index:200;
     font-size: medium;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
@@ -27,13 +28,30 @@ font-size: x-large;
 }
 .modalpopup{
 z-index: 1;
-padding: 20px; 
-border: 3px solid #000000; 
+padding-top: 5px;
+padding-left:10 px;
+padding-right:10 px; 
+padding-bottom:10px;
+border: 4px solid #184F4C; 
 background-color: #FF9D00;
 -webkit-border-radius: 10px;
-width: 200px;
+width: 220px;
 left:30px;
 top:150px;
 position: absolute;
 opacity:0.9;
+text-align: center;
+}
+.modalokay{
+font-size: large;
+}
+.modalpage
+{
+z-index:2;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 200%;
+    top: 0px; left: 0px;
 }
