--- a/tripplanner.css
+++ b/tripplanner.css
@@ -21,6 +21,13 @@ padding-bottom: 5px;
 margin-left: -20px;
 font-size: x-large;
 }
+tr{
+font-size: x-large;
+height:60px
+}
+td{
+text-align:center;
+}
 .modalpopup{
 z-index: 1;
 padding-top: 5px;
@@ -49,4 +56,10 @@ z-index:2;
     width: 100%;
     height: 200%;
     top: 0px; left: 0px;
+}
+.flippedimg
+{
+-moz-transform: scaleY(-1);
+-webkit-transform: scaleY(-1);
+transform: scaleY(-1);
 }
