lots of stuff: 1. dealt with back/forward in preferences, 2. set up the logo as a javascript load in preferences. a few other tweaks

--- a/tripplanner.css
+++ b/tripplanner.css
@@ -63,3 +63,11 @@ z-index:2;
 -webkit-transform: scaleY(-1);
 transform: scaleY(-1);
 }
+.logoimg
+{
+height:57px;
+width:57px;
+margin-bottom: -20px; 
+padding-bottom: 0px;
+border-bottom:0px;
+}
