some tweaks to get us more in line with HTML5, fixed a css error, moved /releasestage to /built in scripts, added robots.txt, added scroll to top on all pages

--- a/common.css
+++ b/common.css
@@ -45,7 +45,7 @@ top:150px;
 position:absolute;
 opacity:0.9;
 text-align:center;
-padding:5px 10px px 10px 10px px;
+padding:5px 10px 10px 10px;
 }
 
 .CSModalButton {
